tdf#93364 vcl rendercontext: fix area that is painted in PaintBuffer()

Usually the topmost window of a paint hierarchy has a paint rectangle
that covers the paint rectangle of all its children, but this is not
necessarly true in every case. One example is the cursor travelling
described in the bug report, where the topmost DockingAreaWindow only
paints a few buttons on the toolbar, and then even if children are
painted correctly to the frame-level persistent buffer, only the
DockingAreaWindow part of the buffer is copied to the screen.

Fix this by building an union rectangle that covers all areas in a
buffered paint run, and then paint that rectangle from the buffer, not
just the paint rectangle of the topmost parent.

Change-Id: Ib0b30413d83c4b3fdec27fa7ddad16c21fd094b6
(cherry picked from commit 7305941b150097123eab664f9ec9e5f3909a5c52)
Reviewed-on: https://gerrit.libreoffice.org/17664
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Tor Lillqvist <tml@collabora.com>
Tested-by: Tor Lillqvist <tml@collabora.com>