vcl/inc/window.h
@@ -181,6 +181,7 @@ struct ImplFrameData
     bool                mbInternalDragGestureRecognizer;
     VclPtr<VirtualDevice> mpBuffer; ///< Buffer for the double-buffering
     bool mbInBufferedPaint; ///< PaintHelper is in the process of painting into this buffer.
+    Rectangle maBufferedRect; ///< Rectangle in the buffer that has to be painted to the screen.
 };
 
 struct ImplAccessibleInfos
